# Coursework

./: .env_example  README.md  blog.json  email_list.json  groups.json  pyproject.toml  requirements.txt
blog/: models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
email_list/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
email_list/management/commands/: mail.py
email_list/migrations/: 0001_initial.py  0002_client_owner_mailingmessage_owner_and_more.py  0003_alter_mailingsettings_options.py  0004_attempt_server_response_alter_mailingsettings_status.py  0005_alter_mailingsettings_is_active_and_more.py  0006_alter_attempt_last_attempt_datetime.py
email_list/templates/email_list/: base.html  main_page.html
email_list/templates/email_list/includes/: inc_main_menu.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py
users/templatetags/: my_tag.py
