[tool.poetry]
name = "cw-6"
version = "0.1.0"
description = ""
authors = ["Sergey Korchmin <sergey.korchmin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
pillow = "^10.4.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
